# pelican-cicd

./: archives.html  authors.html  hello-pelican.html  pelicanconf.py  pyproject.toml  sitemap.xml  tags.html
.github/workflows/: default.yml
content/: hello.md
feeds/: all.atom.xml
output/: categories.html  index.html
output/author/: mirian-batista.html
output/category/: pelican.html
output/feeds/: pelican.atom.xml
output/tag/: pelican.html
tag/: markdown.html
