[tool.poetry]
name = "hello-pelican"
version = "0.0.1"
description = "Hello Pelican"
authors = ["Mírian <mirian.batista@dcx.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"
pelican = "^4.2.0"
markdown = "^3.2.2"
Pillow = "^9.0.0"
lxml = "^4.9.1"
pygithub = "^1.51"
python-dotenv = "^0.21.0"
pelican-sitemap = "^1.0.2"
pelican-liquid-tags = "^1.0.3"
beautifulsoup4 = "^4.11.1"
pysvg = "^0.2.2"
ghp-import = "1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
